# Context-Critic-RAG-IKMS

./: .env.example  README.md  pyproject.toml
ikms-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
ikms-frontend/src/: App.jsx  index.css
ikms-frontend/src/api/: client.js
ikms-frontend/src/components/common/: button.jsx  card.jsx  input.jsx  loader.jsx
ikms-frontend/src/components/features/indexing/: pdfupload.jsx
ikms-frontend/src/components/features/qa/: answerdisplay.jsx  chunkrelevancedisplay.jsx  contextcomparison.jsx  questionform.jsx
ikms-frontend/src/components/layout/: header.jsx  layout.jsx
ikms-frontend/src/hooks/: useIndexing.js  useQA.js
ikms-frontend/src/pages/: Home.jsx
src/app/: api.py  models.py
src/app/core/: config.py
src/app/core/agents/: agents.py  graph.py  prompts.py  state.py  tools.py
src/app/core/llm/: factory.py
src/app/core/retrieval/: serialization.py  vector_store.py
src/app/services/: indexing_service.py  qa_service.py
